--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,8 @@
     <string name="no">Não</string>
     <string name="yes">Sim</string>
     <string name="permission_dialog_read_contacts_message">Precisamos do acesso a lista de contatos do dispositivo. Deseja permitir agora?</string>
+    <string name="go_back">Voltar</string>
+    <string name="call_the_contact">Ligar para o contato</string>
+    <string name="send_message">Enviar mensagem</string>
+    <string name="write_here">escreva aqui...</string>
 </resources>
